--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=none
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-
 # TODO Append connection to DB
 #spring.datasource.driverClassName
 #spring.datasource.url
 #spring.datasource.username
 #spring.datasource.password
+
+
