--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,10 @@
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.hibernate.ddl-auto=update
-
-#spring.jpa.defer-datasource-initialization=true
-#spring.jpa.properties.hibernate.format_sql=true
-
-
-
-#spring.sql.init.mode=always
-
+spring.sql.init.mode=always
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/shareit
 jdbc.username=dbuser
 jdbc.password=12345
-
 hibernate.show_sql=true
 hibernate.jdbc.time_zone=UTC
-
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
