--- a/server/pom.xml
+++ b/server/pom.xml
@@ -29,11 +29,11 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-       <!-- <dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
