--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,12 +9,12 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #---
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+#spring.datasource.username=shareit
+#spring.datasource.password=shareit
 #---
-spring.config.activate.on-profile=test
+#spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=shareit
