--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,11 +11,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+spring.datasource.username=postgres
+spring.datasource.password=1
 #---
 spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=shareit
-spring.datasource.password=shareit
+spring.datasource.password=
